--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+html {
+    scroll-behavior: smooth;
+  }
+  body {
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
